# Langly

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  docs.md  feat.md  ref.md  style.md
backend/: .env.example  auth.py  db.py  main.py  pyproject.toml  speech.py  storage.py
backend/langly_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/routers/: items.py  mylist.py  users.py
docs/: api-design.md  db-design.md  glossary-backend.md  requirements.md  screen-design.md
frontend-web/: package-lock.json  package.json  tsconfig.json
frontend-web/src/app/: layout.tsx  page.tsx
frontend-web/src/app/api/auth/[...nextauth]/: route.ts
frontend-web/src/app/api/auth/signup/: route.ts
frontend-web/src/app/api/study-items/: route.ts
frontend-web/src/app/api/study-items/[id]/: route.ts
frontend-web/src/app/api/test-db/: route.ts
frontend-web/src/app/signup/: page.tsx
frontend-web/src/app/study-items/create/: page.tsx
frontend-web/src/components/: Navbar.tsx  NextAuthProvider.tsx
frontend-web/src/lib/: schema.sql
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/auth/signup/: route.ts
src/app/api/study-items/: route.ts
src/app/api/study-items/[id]/: page.tsx  route.ts
src/app/api/test-db/: route.ts
src/app/signup/: page.tsx
src/components/: Navbar.tsx
src/lib/: db.ts  schema.sql
