[project]
name = "langly-backend"     # プロジェクトの名前
version = "0.1.0"           # バージョン番号
requires-python = ">=3.11"  # Python 3.11以上が必要
dependencies = [.           # インストールが必要なライブラリ一覧
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "azure-cognitiveservices-speech>=1.40.0",
    "supabase>=2.0.0",
]
